# EA-KSAR

./: .env.example  .gitignore  .prettierignore  README_db.md  package-lock.json  package.json  pyproject.toml  server.py  vite.config.js
backend/: app.py  config.py  db.py  logger.py
backend/api/: __init__.py  auth.py  document.py  plants_units.py  unit.py  unit_helpers.py
backend/api/search/: __init__.py  base.py  document.py  placement.py  plant.py  unit.py
backend/models/: __init__.py  container_sys.py  coupon_complect.py  coupon_extract.py  coupon_load.py  placement.py  reactor_vessel.py  sector.py  unit.py
backend/tables/: __init__.py  base.py  container_sys.py  coupon.py  coupon_complect.py  coupon_extract.py  coupon_load.py  document.py  npp.py  placement.py  plant.py  reactor_vessel.py  sector.py  unit.py  user.py
frontend/: index.html
frontend/src/: App.css  App.tsx  AuthContext.tsx  ChangePassword.tsx  ErrorBoundary.tsx  Index.tsx  Login.tsx  Navbar.tsx  Navigator.tsx  Search.tsx  Unit.tsx  Unit2.tsx  UnitSelector.tsx  main.tsx  types.ts  utils.ts
frontend/src/Unit2/: RawDataPanel.tsx  UnitInfoPanel.tsx
frontend/src/document/: Document.tsx  DocumentUpload.tsx  DocumentsSearch.tsx
frontend/src/hooks/: usePageTitle.ts
frontend/src/search/: PlacementSearch.tsx  PlantSearch.tsx  SearchObjectTypeSelector.tsx  UnitSearch.tsx  index.ts
